2007-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-async-exec-with-many-urls): New variable; default to
	t except for XEmacs 21.5.
	(w3m-goto-url): Bind w3m-async-exec to nil when retrieving group:*
	urls if w3m-async-exec-with-many-urls is nil.

	* w3m-session.el (w3m-session-goto-session): Bind w3m-async-exec
	to nil if w3m-async-exec-with-many-urls is nil.

2007-03-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-select): Use next-command-event and
	event-key for XEmacs with checked surely.

2007-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-automatic-save): Remove unused vars.
	(w3m-session-select): Use next-command-event for XEmacs; clear the
	echo area after entering command.

	* shimbun/shimbun.el (shimbun-japanese-hankaku-buffer): Fix regexps.

2007-03-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (autoload): Add w3m-session-select, w3m-session-save and
	w3m-session-automatic-save.
	(w3m-lynx-like-map): Add w3m-session-select and w3m-session-save
	to map.
	(w3m-info-like-map): Ditto.
	(w3m-arrived-shutdown-functions): Add w3m-session-automatic-save.
	(w3m-quit): Call w3m-session-automatic-save.

	* w3m-session.el: New file.

2007-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-clear-contents): Return the result
	of the parent function.
	* shimbun/sb-mainichi.el (shimbun-clear-contents): Ditto.
	* shimbun/sb-nikkansports.el (shimbun-clear-contents): Ditto.
	* shimbun/sb-ohmynews-jp.el (shimbun-clear-contents): Ditto.
	* shimbun/sb-sankei.el (shimbun-clear-contents): Ditto.

	* shimbun/sb-gendai-net.el (shimbun-gendai-net-get-headers-today):
	Work even when the headers are in the reverse order.
	(shimbun-clear-contents): Return the result of the parent function.

	* shimbun/sb-itmedia.el (shimbun-headers): Convert Japanese
	zenkaku characters into hankaku.
	(shimbun-clear-contents): Ditto; return the result of the parent
	function correctly.
